--- a/pom.xml
+++ b/pom.xml
@@ -83,11 +83,11 @@
 		<distributionManagement>
         <repository>
             <id>maven-releases</id>
-            <url>http://15.206.82.156:8081/repository/maven-releases/</url>
+            <url>http://13.234.59.91/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
             <id>maven-snapshots</id>
-            <url>http://15.206.82.156:8081/repository/maven-snapshots/</url>
+            <url>http://13.234.59.91/repository/maven-snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 
