--- a/jenkinsfile
+++ b/jenkinsfile
@@ -91,8 +91,8 @@ pipeline {
         
         stage(' K8 Deployment') {
             steps {
-                withKubeConfig(caCertificate: '', clusterName: ' muhannad-eks', contextName: '', credentialsId: 'k8-token', namespace: 'web', restrictKubeConfigAccess: false, serverUrl: 'https://61BD26150FB02445CE83E3CB1D65296D.gr7.ap-south-1.eks.amazonaws.com') {
-                  sh "kubectl apply -f ds.yml -n web1"
+                withKubeConfig(caCertificate: '', clusterName: ' muhannad-eks', contextName: '', credentialsId: 'k8-token', namespace: 'webapps', restrictKubeConfigAccess: false, serverUrl: 'https://61BD26150FB02445CE83E3CB1D65296D.gr7.ap-south-1.eks.amazonaws.com') {
+                  sh "kubectl apply -f ds.yml -n webapps"
                   sleep 30
                   
                   
@@ -102,9 +102,9 @@ pipeline {
         }   
             stage('Verify Deployment') {
             steps {
-                withKubeConfig(caCertificate: '', clusterName: ' muhannad-eks', contextName: '', credentialsId: 'k8-token', namespace: 'web', restrictKubeConfigAccess: false, serverUrl: 'https://61BD26150FB02445CE83E3CB1D65296D.gr7.ap-south-1.eks.amazonaws.com') {
-                  sh "kubectl get pods -n web1"
-                  sh "kubectl get svc -n web1"
+                withKubeConfig(caCertificate: '', clusterName: ' muhannad-eks', contextName: '', credentialsId: 'k8-token', namespace: 'webapps', restrictKubeConfigAccess: false, serverUrl: 'https://61BD26150FB02445CE83E3CB1D65296D.gr7.ap-south-1.eks.amazonaws.com') {
+                  sh "kubectl get pods -n webapps"
+                  sh "kubectl get svc -n webapps"
                   
                 }
             }    
